--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ recommend
     padding: 0.5rem;
     right: 1.0rem;
     bottom: 1.0rem;
-    left: 7.5rem;
+    left: 6.5rem;
     line-height: 1.5;
   }
 
@@ -1551,6 +1551,10 @@ button.slide-arrow2 {
   .profileTxt {
     width: 100%;
   }
+
+  .slider-works .slick-slide {
+    margin: 0 10px;
+  }
 }
 
 
@@ -1600,5 +1604,4 @@ button.slide-arrow2 {
     top: 20px;
     left: 17px;
   }
-
 }
