--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ reason
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2.5rem 1rem;
+  padding: 1.4rem 1rem;
   background: white;
   border: 1px solid #e6e6e6;
   gap: 10px 5%;
@@ -710,7 +710,7 @@ ul.works_list li p {
 }
 
 .slider-works .slick-slide {
-  width: 800px;
+  width: 550px;
   margin: 0 20px;
   position: relative;
   overflow: hidden;
@@ -783,7 +783,7 @@ button.slide-arrow2 {
 }
 
 .slider-works .prev-arrow2 {
-  left: calc(50% - 450px);
+  left: calc(50% - 300px);
   transform: rotate(180deg);
 }
 
@@ -793,7 +793,7 @@ button.slide-arrow2 {
 }
 
 .slider-works .next-arrow2 {
-  right: calc(50% - 450px);
+  right: calc(50% - 300px);
 }
 
 .slider-works .next-arrow2::before {
@@ -1039,13 +1039,6 @@ ul.works_list li p {
   margin-left: calc(50% - 50vw);
 }
 
-.slider-works .slick-slide {
-  width: 800px;
-  margin: 0 20px;
-  position: relative;
-  overflow: hidden;
-}
-
 .slider-works .slick-arrow {
   width: 60px;
   height: 60px;
@@ -1102,7 +1095,7 @@ button.slide-arrow2 {
 }
 
 .slider-works .prev-arrow2 {
-  left: calc(50% - 450px);
+  left: calc(50% - 300px);
   transform: rotate(180deg);
 }
 
@@ -1112,7 +1105,7 @@ button.slide-arrow2 {
 }
 
 .slider-works .next-arrow2 {
-  right: calc(50% - 450px);
+  right: calc(50% - 300px);
 }
 
 .slider-works .next-arrow2::before {
@@ -1505,7 +1498,7 @@ button.slide-arrow2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2.5rem 1rem;
+    padding: 1rem 1rem;
     background: white;
     border: 1px solid #e6e6e6;
     gap: 10px 5%;
@@ -1538,6 +1531,31 @@ button.slide-arrow2 {
 
   .mt10 {
     margin-top: 3rem;
+  }
+
+  .recommendText {
+    padding: 0.5rem;
+    right: 1.0rem;
+    bottom: 1.0rem;
+    left: 8rem;
+    line-height: 1.5;
+  }
+
+  .recommendTextList li {
+    font-size: 0.9em;
+  }
+
+  .recommendTextList li::before {
+    content: "";
+    display: inline-block;
+    width: 1.2em;
+    height: 2em;
+    margin-right: 0.1em;
+    background-image: url(../img/icon_check.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    vertical-align: middle;
   }
 }
 
